src/main/java/com/example/nya_shopping/controller/error/UnauthorizedAccessException.java
package com.example.nya_shopping.controller.error;

public class UnauthorizedAccessException extends RuntimeException {
    public UnauthorizedAccessException(String message) {
        super(message);
    }
}
